# quran-srs

./: main.py  pyproject.toml  requirements.txt  utils.py
public/: set_user_timezone.js
tests/: test_single_entry_page.py  test_single_entry_page_e2e.py
