[project]
name = "quran-srs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "humanize>=4.12.1",
    "monsterui>=1.0.10",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "playwright>=1.51.0",
    "pytest-playwright>=0.7.0",
    "python-fasthtml>=0.12.1",
]
[tool.pytest.ini_options]
pythonpath = "." # or other dir ...